# Blinkr

./: .gitignore  Anchor.toml  build-context.md  package.json
.github/workflows/: ci.yml
apps/docs/: docs.json  index.mdx  package.json
apps/docs/api/: claim.mdx  confirm-escrow.mdx  create-blink.mdx  employer-auth.mdx  prepare-fund-tx.mdx  status.mdx  webhooks.mdx
apps/docs/architecture/: auth-flow.mdx  escrow-lifecycle.mdx  queue-workers.mdx  state-machine.mdx  system-overview.mdx  webhook-flow.mdx
apps/docs/contributing/: ci.mdx  common-mistakes.mdx  local-setup.mdx  repo-structure.mdx  testing.mdx
apps/docs/program/: claim-authorization.mdx  escrow-accounts.mdx  pda-derivation.mdx  relayer-signatures.mdx  token-accounts.mdx
apps/web/: .env.example  .gitignore  instrumentation.ts  middleware.ts  next.config.mjs  package.json  postcss.config.mjs  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/components/: StitchesRegistry.tsx
apps/web/hooks/: useDashboardData.ts
apps/web/lib/: anchor.ts  auth.ts  blinkDisplayFormat.ts  blinkGuards.ts  blinkStateMachine.ts  claimInstruction.ts  claimMessage.ts  contractorOtp.ts  contractorUsdcBalance.ts  createEscrowInstruction.ts  dashboardAnalytics.ts  decodedEscrow.ts  (+24 more)
programs/blinkremit/: Cargo.toml
programs/blinkremit/src/: constants.rs  error.rs  lib.rs
programs/blinkremit/src/instructions/: claim_escrow.rs  create_escrow.rs  mod.rs  refund_escrow.rs
programs/blinkremit/src/state/: escrow.rs
tests/: blinkremit.ts
(+74 files in other folders)
