[package]
name = "blinkremit"
version = "0.1.0"
description = "BlinkRemit USDC escrow (Anchor)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blinkremit"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["associated_token", "token_2022"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc", "zeroize"] }
solana-sha256-hasher = "3.1.0"
